--- a/mywork.html
+++ b/mywork.html
@@ -39,6 +39,8 @@
   <div class="carousel-inner">
     <div class="carousel-item active fluid">
       <img class="d-block w-100" src="e151.png" alt="First slide">
+      <div><h4 class="captionhead d-none d-md-block">E15 Consulting Project</h4>
+      <p class="captionbody d-none d-md-block">Analyticial consulting work on Concession Combos for NBA team</p></div>
   </div>
     <div class="carousel-item fluid">
       <img class="d-block w-100" src="e152.png" alt="Second slide">
