--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <div class="row">
       <div class="col-fluid" id="image">
 <h2><u>What is MMM?</h2></u>
-    <p><img src="MMM.jpg"></p>
+    <p><img src="MMM.jpg" style='width:100%;' border="0" alt="Null"></p>
 <div id="MMM">
       <p>The MMM Program is a dual-degree, full-time program that equips students to drive the entire innovation life cycle of a product or service. The MMM Program comprises lectures, experiential courses and studio-based classes that take place in both the day and evening. Much of the core coursework in the curriculum requires technical aptitude and the capacity for both analytical and creative thinking. Graduates from the program will be equipped with a new, unique perspective, one that allows an individual to balance big-picture ideas with the detailed processes that make those ideas come to life.</p>
 </div>
