--- a/aboutme.html
+++ b/aboutme.html
@@ -47,7 +47,7 @@
   <p><lo><ul>All kinds of drinks (Beer, Coffee, Whiskey, etc.)</ul></lo></p>
   </div>
   </div>
-<div class="col-9">
+<div class="col-9 overflow-x:auto;">
   <table class="table d-sm-fluid">
     <thead class="thead-inverse">
      <tr>
