--- a/aboutme.html
+++ b/aboutme.html
@@ -35,7 +35,7 @@
     <!-- Your stuff goes here -->
     <div class="container-fluid">
       <div class="row">
-      <div class="col-3 fluid" style="background-color:#d9d9f2">
+      <div class="col-3 col-responsive" style="background-color:#d9d9f2">
         <p class="fluid"><h1><b>David Lee</b></h1></p>
 <img src="portrait.jpg" class="img-fluid mx-auto d-none d-md-block rounded-circle">
 <p><p><button type="button" class="btn-fluid btn-warning btn-md"><a href="https://www.linkedin.com/in/davidtglee">LinkedIn Profile</a></button></p>
@@ -47,8 +47,8 @@
   <p><lo><ul>All kinds of drinks (Beer, Coffee, Whiskey, etc.)</ul></lo></p>
   </div>
   </div>
-<div class="col-9 overflow-x:auto;">
-  <table class="table d-sm-fluid">
+<div class="col-9">
+  <table class="table table-responsive">
     <thead class="thead-inverse">
      <tr>
         <th><li>Life</li></th>
@@ -76,7 +76,7 @@
      </tr>
       </table>
 
-  <table class="table d-sm-fluid">
+  <table class="table table-responsive">
     <thead class="thead-inverse">
    <tr>
       <th><li>Work Experience</li></th>
@@ -119,7 +119,7 @@
 </tbody>
 </table>
 
-<table class="table d-sm-fluid">
+<table class="table table-responsive">
   <thead class="thead-inverse">
    <tr>
       <th><li>
