--- a/aboutme.html
+++ b/aboutme.html
@@ -38,7 +38,7 @@
       <div class="col-3 col-responsive" style="background-color:#d9d9f2">
         <p class="fluid"><h1><b>David Lee</b></h1></p>
 <img src="portrait.jpg" class="img-fluid mx-auto d-none d-md-block rounded-circle">
-<p><p><button type="button" class="btn-fluid btn-warning btn-md btn-responsive"><a href="https://www.linkedin.com/in/davidtglee">LinkedIn Profile</a></button></p>
+<p><p><button type="button" class="button"><a href="https://www.linkedin.com/in/davidtglee">LinkedIn Profile</a></button></p>
 <div class="textbody d-none d-md-block">
   <p><lo><ul>Achiever & Innvoator</ul> </lo></p>
   <p><lo><ul>Interest in High-tech, Innovation</ul></lo></p>
