--- a/aboutme.html
+++ b/aboutme.html
@@ -34,11 +34,13 @@
 </nav>
     <!-- Your stuff goes here -->
     <div class="container-fluid">
-      <div class="row">
+      <div class="row row-responsive">
       <div class="col-3 col-responsive" style="background-color:#d9d9f2">
         <p class="fluid"><h1><b>David Lee</b></h1></p>
 <img src="portrait.jpg" class="img-fluid mx-auto d-none d-md-block rounded-circle">
-<p><p><button type="button" class="btn button btn-sm"><a href="http://www.linkedin.com/in/davidtglee">LinkedIn Profile</a></button></p>
+<p><p><form action="http://www.linkedin.com/in/davidtglee">
+    <input type="submit" class="input-fluid input-responsive" value="LinkedIn" >
+</form>
 <div class="textbody d-none d-md-block">
   <p><lo><ul>Achiever & Innvoator</ul> </lo></p>
   <p><lo><ul>Interest in High-tech, Innovation</ul></lo></p>
@@ -48,7 +50,7 @@
   </div>
   </div>
 <div class="col-9">
-  <table class="table table-responsive">
+  <table class="table table-responsive fluid">
     <thead class="thead-inverse">
      <tr>
         <th><li>Life</li></th>
@@ -76,7 +78,7 @@
      </tr>
       </table>
 
-  <table class="table table-responsive">
+  <table class="table table-responsive fluid">
     <thead class="thead-inverse">
    <tr>
       <th><li>Work Experience</li></th>
@@ -119,7 +121,7 @@
 </tbody>
 </table>
 
-<table class="table table-responsive">
+<table class="table table-responsive fluid">
   <thead class="thead-inverse">
    <tr>
       <th><li>
