--- a/aboutme.html
+++ b/aboutme.html
@@ -39,7 +39,7 @@
         <p class="fluid"><h1><b>David Lee</b></h1></p>
 <img src="portrait.jpg" class="img-fluid mx-auto d-none d-md-block rounded-circle">
 <p><p><form action="http://www.linkedin.com/in/davidtglee">
-    <input type="submit" class="input-fluid input-responsive" value="LinkedIn" >
+    <input type="submit" class="fluid" value="LinkedIn">
 </form>
 <div class="textbody d-none d-md-block">
   <p><lo><ul>Achiever & Innvoator</ul> </lo></p>
@@ -51,7 +51,7 @@
   </div>
 <div class="col-9">
   <table class="table table-responsive fluid">
-    <thead class="thead-inverse">
+    <thead class="thead-inverse fluid">
      <tr>
         <th><li>Life</li></th>
         <th></th>
