--- a/index.html
+++ b/index.html
@@ -43,17 +43,18 @@
 </div>
   <div class="container">
     <div class="row">
-      <div class="col fluid">
+      <div class="col-md-6 container-fluid">
 <h2><u>What is MMM?</h2></u>
-    <p><img src="MMM.jpg" class="img-fluid"></p>
-<div id="MMM" class="conatiner-responsive fluid">
+    <p><div class="image">
+    <img src="MMM.jpg"></p></div>
+<div id="MMM" class="container-responsive fluid">
       <p>The MMM Program is a dual-degree, full-time program that equips students to drive the entire innovation life cycle of a product or service. The MMM Program comprises lectures, experiential courses and studio-based classes that take place in both the day and evening. Much of the core coursework in the curriculum requires technical aptitude and the capacity for both analytical and creative thinking. Graduates from the program will be equipped with a new, unique perspective, one that allows an individual to balance big-picture ideas with the detailed processes that make those ideas come to life.</p>
 </div>
 </div>
-<div class="col fluid">
-  <h2><u>Kellogg School of Management</h2></u>
+<div class="col-md-6 container-fluid">
+  <h2><u>Kellogg School of Management</h2></u><p>
   <div class="video-container"><iframe width="400" height="350" src="https://www.youtube.com/embed/IOb22CO96hI" frameborder="0" allowfullscreen=""></iframe></div>
-  <div id="MMM" class="conatiner-responsive fluid">
+  <div id="MMM" class="container-responsive fluid">
     <p><p>The Kellogg Purpose is to educate, equip & inspire brave leaders who build strong organizations and wisely leverage the power of markets to create lasting value.</p></p></div>
 </div>
 </div>
