--- a/mywork.html
+++ b/mywork.html
@@ -38,68 +38,68 @@
   <div class="carousel-inner">
     <div class="carousel-item active fluid">
       <img class="d-block w-100" src="e151.png" alt="First slide">
-      <div><h4 class="captionhead d-none d-md-block">E15 Consulting Project</h4>
-      <p class="captionbody d-none d-md-block">Analyticial consulting work on Concession Combos for NBA team</p></div>
+      <div><h4 class="captionhead">E15 Consulting Project</h4>
+      <h5><p class="captionbody">Analyticial consulting work on Concession Combos for NBA team</p></div></h5>
   </div>
     <div class="carousel-item fluid">
       <img class="d-block w-100" src="e152.png" alt="Second slide">
-      <div><h4 class="captionhead d-none d-md-block">E15 Consulting Project</h4>
-      <p class="captionbody d-none d-md-block">Analyticial consulting work on Concession Combos for NBA team</p></div>
+      <div><h4 class="captionhead">E15 Consulting Project</h4>
+      <h5><p class="captionbody">Analyticial consulting work on Concession Combos for NBA team</p></div></h5>
 </div>
     <div class="carousel-item fluid">
       <img class="d-block w-100" src="rdb1.png" alt="Third slide">
-      <div><h4 class="captionhead d-none d-md-block">Research, Design, and Build</h4>
-      <p class="captionbody d-none d-md-block">Brand revitalization project for Harley-Davidson to increase brand relevancy among millenials</p></div>
+      <div><h4 class="captionhead">Research, Design, and Build</h4>
+      <h5><p class="captionbody">Brand revitalization project for Harley-Davidson to increase brand relevancy among millenials</p></div></h5>
  </div>
  <div class="carousel-item fluid">
    <img class="d-block w-100" src="rdb2.png" alt="Fourth slide">
-   <div><h4 class="captionhead d-none d-md-block">Research, Design, and Build</h4>
-   <p class="captionbody d-none d-md-block">Brand revitalization project for Harley-Davidson to increase brand relevancy among millenials</p></div>
+   <div><h4 class="captionhead">Research, Design, and Build</h4>
+   <h5><p class="captionbody">Brand revitalization project for Harley-Davidson to increase brand relevancy among millenials</p></div></h5>
 </div>
 <div class="carousel-item fluid">
   <img class="d-block w-100" src="paparazme1.png" alt="Fifth slide">
-  <div><h4 class="captionhead d-none d-md-block">Go-To-Market Strategy Project</h4>
-  <p class="captionbody d-none d-md-block">Devised Product Vision/Go-To-Market Strategy for Israeli photosharing start-up</p></div>
+  <div><h4 class="captionhead">Go-To-Market Strategy Project</h4>
+  <h5><p class="captionbody">Devised Product Vision/Go-To-Market Strategy for Israeli photosharing start-up</p></div></h5>
 </div>
 <div class="carousel-item fluid">
   <img class="d-block w-100" src="paparazme2.png" alt="Sixth slide">
-  <div><h4 class="captionhead d-none d-md-block">Go-To-Market Strategy Project</h4>
-  <p class="captionbody d-none d-md-block">Devised Product Vision/Go-To-Market Strategy for Israeli photosharing start-up</p></div>
+  <div><h4 class="captionhead">Go-To-Market Strategy Project</h4>
+  <h5><p class="captionbody">Devised Product Vision/Go-To-Market Strategy for Israeli photosharing start-up</p></div></h5>
 </div>
 <div class="carousel-item fluid">
   <img class="d-block w-100" src="if1.png" alt="Seventh slide">
-  <div><h4 class="captionhead d-none d-md-block">Innovation Frontier</h4>
-  <p class="captionbody d-none d-md-block">Developed prodct/business model to tackle obesitiy among children/teenagers</p></div>
+  <div><h4 class="captionhead">Innovation Frontier</h4>
+  <h5><p class="captionbody">Developed prodct/business model to tackle obesitiy among children/teenagers</p></div></h5>
 </div>
 <div class="carousel-item fluid">
   <img class="d-block w-100" src="if2.png" alt="Eigth slide">
-  <div><h4 class="captionhead d-none d-md-block">Innovation Frontier</h4>
-  <p class="captionbody d-none d-md-block">Developed prodct/business model to tackle obesitiy among children/teenagers</p></div>
+  <div><h4 class="captionhead">Innovation Frontier</h4>
+<h5>  <p class="captionbody">Developed prodct/business model to tackle obesitiy among children/teenagers</p></div></h5>
 </div>
 <div class="carousel-item fluid">
   <img class="d-block w-100" src="adobe1.png" alt="Ninth slide">
-  <div><h4 class="captionhead d-none d-md-block">Adoby Analytics Challenge</h4>
-  <p class="captionbody d-none d-md-block">Proposed digital marketing solutions to increase conversionr rate for client (Sony). Semi-finalist.</p></div>
+  <div><h4 class="captionhead">Adoby Analytics Challenge</h4>
+  <h5><p class="captionbody">Proposed digital marketing solutions to increase conversionr rate for client (Sony). Semi-finalist.</p></div></h5>
 </div>
 <div class="carousel-item fluid">
   <img class="d-block w-100" src="adobe2.png" alt="Tenth slide">
-  <div><h4 class="captionhead d-none d-md-block">Adoby Analytics Challenge</h4>
-  <p class="captionbody d-none d-md-block">Proposed digital marketing solutions to increase conversionr rate for client (Sony). Semi-finalist.</p></div>
+  <div><h4 class="captionhead">Adoby Analytics Challenge</h4>
+<h5>  <p class="captionbody">Proposed digital marketing solutions to increase conversionr rate for client (Sony). Semi-finalist.</p></div></h5>
 </div>
 <div class="carousel-item fluid">
   <img class="d-block w-100" src="Microsoft1.png" alt="Eleventh slide">
-  <div><h4 class="captionhead d-none d-md-block">Microsoft Business Innovation Challenge</h4>
-  <p class="captionbody d-none d-md-block">Proposed innovative app ideas for Surface brand</p></div>
+  <div><h4 class="captionhead">Microsoft Business Innovation Challenge</h4>
+   <h5><p class="captionbody">Proposed innovative app ideas for Surface brand</p></div></h5>
 </div>
 <div class="carousel-item fluid">
   <img class="d-block w-100" src="Microsoft2.png" alt="Twelvth slide">
-  <div><h4 class="captionhead d-none d-md-block">Microsoft Business Innovation Challenge</h4>
-  <p class="captionbody d-none d-md-block">Proposed innovative app ideas for Surface brand</p></div>
+  <div><h4 class="captionhead">Microsoft Business Innovation Challenge</h4>
+<h5>  <p class="captionbody">Proposed innovative app ideas for Surface brand</p></div></h5>
 </div>
 <div class="carousel-item fluid">
   <img class="d-block w-100" src="Microsoft3.png" alt="Thirteenth slide">
-  <div><h4 class="captionhead d-none d-md-block">Microsoft Business Innovation Challenge</h4>
-  <p class="captionbody d-none d-md-block">Proposed innovative app ideas for Surface brand</p></div>
+  <div><h4 class="captionhead">Microsoft Business Innovation Challenge</h4>
+<h5>  <p class="captionbody">Proposed innovative app ideas for Surface brand</p></div></h5>
 </div>
     </div>
     <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
