--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
 </nav>
 <div class="jumbotron jumbotron-fluid text-center">
   <img src="portrait.jpg" class="img-fluid rounded-circle">
-    <h1 class="display-2"><b>David Lee</h1></b>
+    <h1 class="display-2 fluid"><b>David Lee</h1></b>
   <p class="lead">
-    <h5><div class="d-inline-block bg-warning">Kellogg MMM Candidate ('18) _ Innovator & Dreamer </div></p></h5>
+    <h5><div class="d-inline-block bg-warning fluid">Kellogg MMM Candidate ('18)  __  Tech+Innovation+Marketing </div></p></h5>
 </div>
   <div class="container">
     <div class="row">
