--- a/mywork.html
+++ b/mywork.html
@@ -87,17 +87,17 @@
 <h5>  <p class="captionbody">Proposed digital marketing solutions to increase conversionr rate for client (Sony). Semi-finalist.</p></div></h5>
 </div>
 <div class="carousel-item fluid">
-  <img class="d-block w-100" src="Microsoft1.png" alt="Eleventh slide">
+  <img class="d-block w-100" src="microsoft1.png" alt="Eleventh slide">
   <div><h4 class="captionhead">Microsoft Business Innovation Challenge</h4>
    <h5><p class="captionbody">Proposed innovative app ideas for Surface brand</p></div></h5>
 </div>
 <div class="carousel-item fluid">
-  <img class="d-block w-100" src="Microsoft2.png" alt="Twelvth slide">
+  <img class="d-block w-100" src="microsoft2.png" alt="Twelvth slide">
   <div><h4 class="captionhead">Microsoft Business Innovation Challenge</h4>
 <h5>  <p class="captionbody">Proposed innovative app ideas for Surface brand</p></div></h5>
 </div>
 <div class="carousel-item fluid">
-  <img class="d-block w-100" src="Microsoft3.png" alt="Thirteenth slide">
+  <img class="d-block w-100" src="microsoft3.png" alt="Thirteenth slide">
   <div><h4 class="captionhead">Microsoft Business Innovation Challenge</h4>
 <h5>  <p class="captionbody">Proposed innovative app ideas for Surface brand</p></div></h5>
 </div>
